static/css/main.css
/* ... */
label.sidenote-number { display: inline; }

label.margin-toggle:not(.sidenote-number) { display: none; }

.iframe-wrapper { position: relative;
                  padding-bottom: 56.25%; /* 16:9 */
                  padding-top: 25px;
                  height: 0; }

.iframe-wrapper iframe { position: absolute;
                         top: 0;
                         left: 0;
                         width: 100%;
                         height: 100%; }

/* Custom Styles */

dd { font-size: 1.4rem;
     line-height: 2rem; }

dt { font-size: 1.7rem;
     margin-bottom: .6em;
     margin-top: 2rem; }

.post-meta { font-style: italic; }

.post-list { list-style-type: none;
             padding-left: 0;
	     padding-right: 13%; }

.post-list li:before { content:''; }

.post-list li+li { border-top: 1px solid #eee;
                   padding-top: 1.5rem;
                   margin-top: 2rem; }

.post-list p { font-size: 1.2rem;
               margin-top: .4rem; }

.post-list-meta { background: none;
	          display: block;
	          font-size: .67em;
       	          letter-spacing: .1em;
	          text-transform: uppercase; }

.post-list-meta .day { font-family: "et-book-roman-old-style";
                       letter-spacing: normal; }

.task-list { padding-left: 1em; }

.task-list label { display: block;
                   padding-left: 1.4em;
                   text-indent: -1.4em; }

.task-list li:before { content:''; }

.task-list-item { visibility: hidden;
                  margin-right: .5rem;
                  position: relative; }

.task-list-item:before { border: 1px solid #111;
                         content: '';
                         display: block;
			 padding: .4rem;
			 left: -.035rem;
		         position: absolute;
		         top: -.05rem;
		         visibility: visible; }

.task-list-item:checked:after { content: '\2713';
                                font-size: 1.4rem;
                                position: absolute;
                                top: -.75rem;
                                visibility: visible; }

.topic-list { font-size: .67em;
              font-style: normal;
	      letter-spacing: .1em;
	      text-transform: uppercase; }

.topic-list ul { float: none; }

.topic-list li { display: inline-block;
                 list-style-type: none;
	         margin: 0 1rem 0 0;
		 padding: 0; }

.topic-list li:before { content:''; }

.footnote-ref { font-size: .8rem; }

/* Utility classes */

.nowrap {
  white-space: nowrap;
}

.reversed {
 direction: rtl;
 unicode-bidi:bidi-override;
}

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

@media (max-width: 760px) { body { width: 84%;
                                   padding-left: 8%;
                                   padding-right: 8%; }
			    nav { padding-right: 8%; } 
			    h1 { margin-top: 2rem; }
                            h1 + div.epigraph { margin: 5em 0 3em; }
                            h1 + div.epigraph > blocquote { margin-bottom: 2em; }
			    main { padding-top: 3rem; }
                            hr, section > p, section > footer, section > table, .section-navigation { width: 100%; }
                            pre.code { width: 97%; }
                            section > dl, section > ol, section > ul, .footnotes { width: 90%; }
                            ul > li { clear: both; }
                            figure { max-width: 90%; }
                            figcaption, figure.fullwidth figcaption { margin-right: 0%;
                                                                      max-width: none; }
                            figure.masthead { margin-bottom: 3rem; }
                            figure .half-width { max-width: 60%; }
                            blockquote { margin-left: 1.5em;
                                         margin-right: 0em; }
                            blockquote p, blockquote footer { width: 100%; }
                            label.margin-toggle:not(.sidenote-number) { display: inline; }
                            .sidenote, .marginnote { display: none; }
                            .margin-toggle:checked + .sidenote,
                            .margin-toggle:checked + .marginnote { display: block;
                                                                   float: left;
                                                                   left: 1rem;
                                                                   clear: both;
                                                                   width: 95%;
                                                                   margin: 1rem 2.5%;
                                                                   vertical-align: baseline;
                                                                   position: relative; }
                            label { cursor: pointer; }
                            div.table-wrapper, table { width: 85%; }
                            img { width: 100%; } }

